Fixed text overflow

--- a/blocks/pmc-bar/pmc-bar.css
+++ b/blocks/pmc-bar/pmc-bar.css
@@ -45,8 +45,7 @@
 	font-family: "Archivo", sans-serif;
 	font-weight: 700;
 	font-size: 1.3rem;
-	display: flex;
-	align-items: center;
+	margin: auto;
 	color: var(--color-grey-2);
 	text-decoration-color: transparent;
 	text-transform: uppercase;
